--- a/lawwa-web-revised/index.html
+++ b/lawwa-web-revised/index.html
@@ -127,6 +127,11 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active"  style="max-height: 550px">
@@ -217,7 +222,6 @@
               </div>
           </div>
           <div class="carousel-item"  style="max-height: 550px">
-            <!-- <img class="d-block w-100" src="img/lawwa-img/LATH3.JPG" alt="Third slide" style="max-height: 550px;"> -->
             <img class="d-block w-100" src="img/lawwa-img/newbanner2LADH.jpg" alt="Fourth slide">
             <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
                 <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
@@ -247,8 +251,37 @@
               </div>
           </div>
           <div class="carousel-item"  style="max-height: 550px">
+            <img class="d-block w-100" src="img/lawwa-img/movingbanner2.gif " alt="Fifth slide" >
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+              </div>
+          </div>
+          <div class="carousel-item"  style="max-height: 550px">
             <a href="https://laba.lawwa.asia" target="_blank">
-            <img class="d-block w-100" src="img/lawwa-img/labaramadhan.jpg " alt="Fifth slide" style="max-height: 550px" >
+            <img class="d-block w-100" src="img/lawwa-img/ramadhan1.jpg " alt="Sixth slide" style="max-height: 550px" >
             </a>
             <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
                 <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
@@ -277,6 +310,131 @@
                 </div>
               </div>
           </div>
+          <div class="carousel-item"  style="max-height: 550px">
+            <a href="https://laba.lawwa.asia" target="_blank">
+            <img class="d-block w-100" src="img/lawwa-img/ramadhan2.JPG " alt="Seventh slide" style="max-height: 550px" >
+            </a>
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+              </div>
+          </div>
+          <div class="carousel-item"  style="max-height: 550px">
+            <a href="https://laba.lawwa.asia" target="_blank">
+            <img class="d-block w-100" src="img/lawwa-img/ramadhan3.JPG " alt="Eighth slide" style="max-height: 550px" >
+            </a>
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+              </div>
+          </div>
+          <div class="carousel-item"  style="max-height: 550px">
+            <a href="https://laba.lawwa.asia" target="_blank">
+            <img class="d-block w-100" src="img/lawwa-img/ramadhan4.JPG " alt="Ninth slide" style="max-height: 550px" >
+            </a>
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+              </div>
+          </div>
+          <div class="carousel-item"  style="max-height: 550px">
+            <a href="https://laba.lawwa.asia" target="_blank">
+            <img class="d-block w-100" src="img/lawwa-img/ramadhan5.JPG " alt="Tenth slide" style="max-height: 550px" >
+            </a>
+            <div class="row w-100" style="position: absolute; bottom: 0; margin-bottom: 10px;">
+                <div class="col-12 col-xl-12 col-lg-12 col-md-6 col-sm-6" style="text-align: right;">
+                    <div class="custom-social">
+                      <a href="https://www.facebook.com/lawwa.asia/" target="_blank">
+                        <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/facebook logo.png" />
+                          </div>
+                        </a>
+                        <a href="https://www.instagram.com/lawwa.asia/?hl=en" target="_blank">
+                          <div class="" style="max-width: 25px; max-height: 25px;" >
+                            <img src="img/lawwa-img/Logo/instagram logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/twitter logo.png" />
+                          </div>
+                        </a>
+                        <a href="#">
+                          <div class="" style="max-width: 25px; max-height: 25px;">
+                            <img src="img/lawwa-img/Logo/mail logo.png" />
+                          </div>
+                        </a>
+                      </div>
+                </div>
+              </div>
+          </div>
+
         </div>
         <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
