--- a/lawwa-web-revised/treatment.html
+++ b/lawwa-web-revised/treatment.html
@@ -147,8 +147,8 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Treatment Type 1</h5>
+                        <img src="img/lawwa-img/img-selection/Treatment/tummypoint.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Belly Point Treatment</h5>
                         <p>
 
                         </p>
@@ -156,8 +156,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Treatment Type 2</h5>
+                        <img src="img/lawwa-img/img-selection/Treatment/bust-enhancement.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Bust Enhancement Treatment</h5>
                         <p>
 
                         </p>
@@ -165,8 +165,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Treatment Type 3</h5>
+                        <img src="img/lawwa-img/img-selection/Treatment/hip-uplifting.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Hip Uplifting Treatment</h5>
                         <p>
                           
                         </p>
