--- a/lawwa-web-revised/addon.html
+++ b/lawwa-web-revised/addon.html
@@ -125,7 +125,7 @@
       <section>
         <div class="container-fluid">
           <div class="col-lg-12 p-0 ">
-            <img class="cust-banner-pic" src="img/lawwa-img/treatment.jpg">
+            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Add-On/addons-banner.JPG">
           </div>
         </div>
       </section>
@@ -150,7 +150,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <img src="img/lawwa-img/img-selection/Add-On/henna.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Henna</h5>
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <img src="img/lawwa-img/img-selection/Add-On/manicure.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Manicure</h5>
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
@@ -166,8 +166,80 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <img src="img/lawwa-img/img-selection/Add-On/pedicure.jpg" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Pedicure</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/eye-perming.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Eye Perming</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/eye-treatment.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Eye Treatment</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/face-guasha.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Face Gua Sha</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/lips-treatment.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Lips Treatment</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/herbbath.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Herb Bath</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/reflexology.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Reflexology</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/tangas-basah.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">'Tangas Basah'</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/waxing.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Waxing</h5>
+                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/img-selection/Add-On/whitening-bodyscrub.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Whitening Body Scrub</h5>
                         <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
                     </div>
