--- a/lawwa-web-revised/confinement.html
+++ b/lawwa-web-revised/confinement.html
@@ -125,7 +125,7 @@
       <section>
         <div class="container-fluid">
           <div class="col-lg-12 p-0 ">
-            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Confinement/Confinement-Confinement.JPG" width="1000px" height="500px">
+            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Confinement/confinement-banner.JPG" width="1000px" height="500px">
           </div>
         </div>
       </section>
@@ -140,15 +140,15 @@
                   <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
                     <h3>Confinement Services</h3>
                         <!-- <p>Lorem .</p> -->
-                          <p>Massage meant to refreshes your body, sooth your aching muscle, and calm your mind. Find one that  suit your mood now !</p>
+                          <p>It's crucial to pamper yourself in this time !</p>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Confinement Type 1</h5>
+                        <img src="img/lawwa-img/img-selection/Confinement/normal-confinement.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Normal Confinement</h5>
                         <p>
                           
                           </p>
@@ -156,8 +156,8 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Confinement Type 2</h5>
+                        <img src="img/lawwa-img/img-selection/Confinement/caesar-confinement.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Caesar</h5>
                         <p>
 
                         </p>
@@ -165,13 +165,22 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Confinement Type 3</h5>
+                        <img src="img/lawwa-img/img-selection/Confinement/misscariage.JPG" alt="">
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Miscarriage</h5>
                         <p>
                           
                         </p>
                     </div>
                 </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                  <div class="services-item">
+                      <img src="img/lawwa-img/img-selection/Confinement/single-confinement care.JPG" alt="">
+                      <h5 class="lawwa-blue-text" style="text-transform: none;">Single Confinement Care</h5>
+                      <p>
+
+                      </p>
+                  </div>
+              </div>
             </div>
         </div>
     </section>
