--- a/lawwa-web-revised/makeup.html
+++ b/lawwa-web-revised/makeup.html
@@ -125,7 +125,7 @@
       <section>
         <div class="container-fluid">
           <div class="col-lg-12 p-0 ">
-            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Make-Up/Makeup-Makeup.jpg">
+            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Make-Up/make-up banner.JPG">
           </div>
         </div>
       </section>
@@ -152,7 +152,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                       <div class="block">
-                        <img src="img/lawwa-img/img-selection/Make-Up/makeup - event.jpg" alt="" style="object-fit: cover; object-position: center center;">
+                        <img src="img/lawwa-img/img-selection/Make-Up/event.JPG" alt="" style="object-fit: cover; object-position: center center;">
                       </div>
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Event</h5>
                         <p>
@@ -162,7 +162,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/img-selection/Make-Up/Makeup - wedding brides.jpg" alt="" style="object-fit: cover; object-position:50% 30%;">
+                        <img src="img/lawwa-img/img-selection/Make-Up/wedding.JPG" alt="" style="object-fit: cover; object-position:50% 30%;">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Wedding</h5>
                         <p>
                           
