--- a/lawwa-web-revised/massage.html
+++ b/lawwa-web-revised/massage.html
@@ -125,7 +125,7 @@
       <section>
         <div class="container-fluid">
           <div class="col-lg-12 p-0 ">
-            <img class="cust-banner-pic" src="img/lawwa-img/treatment.jpg">
+            <img class="cust-banner-pic" src="img/lawwa-img/img-selection/Massage/massage-banner.jpg">
           </div>
         </div>
       </section>
@@ -147,7 +147,7 @@
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/img-selection/Massage/classic massage.JPG" alt="">
+                        <img src="img/lawwa-img/img-selection/Massage/classic-massage.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Classic Massage</h5>
                         <p>
                           A stress-relieving experience to stimulate your blood circulation & relieve tight muscles.
@@ -157,7 +157,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/img-selection/Massage/gua sha body.JPG" alt="">
+                        <img src="img/lawwa-img/img-selection/Massage/guasha-body.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Gua Sha Body Drainage Massage</h5>
                         <p>
                           How often do you end the day feeling worn out and stressed? We offer this massage to help you soothing the stress and releasing the tension.
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
-                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <img src="img/lawwa-img/img-selection/Massage/aromatherapy.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Aromatherapy Massage</h5>
                         <p>
                           A nature breeze of relaxation comes from our Lawwa Aromatherapy Oil for full body massage that promote beneficial changes in your mind and body. 
