--- a/lawwa-web-revised/gallery.html
+++ b/lawwa-web-revised/gallery.html
@@ -154,11 +154,11 @@
                               <span class="icon_plus"></span></a>
                         </div>
                         <div class="gf-item small-height set-bg recruitment" data-setbg="img/lawwa-img/web-gallery/DIN22668.jpg">
-                            <a href="img/lawwa-img/web-gallery/DIN22668.jpg" class="gf-icon image-popup"><span
+                            <a href="img/lawwa-img/web-gallery/DIN22668.JPG" class="gf-icon image-popup"><span
                                     class="icon_plus"></span></a>
                         </div>
                         <div class="gf-item set-bg pbt" data-setbg="img/lawwa-img/web-gallery/DIN22473.jpg">
-                            <a href="img/lawwa-img/web-gallery/DIN22473.jpg" class="gf-icon image-popup"><span
+                            <a href="img/lawwa-img/web-gallery/DIN22473.JPG" class="gf-icon image-popup"><span
                                     class="icon_plus"></span></a>
                         </div>
                         <!-- <div class="gf-item large-height set-bg natural" data-setbg="img/gallery/gallery-6.jpg">
