--- a/lawwa-web-revised/addon.html
+++ b/lawwa-web-revised/addon.html
@@ -141,7 +141,7 @@
                     <h3>Add-On Services</h3>
                         <!-- <p>Lorem .</p> -->
                           <p>
-                            With a large vareity of add-ons, you can make the most of your service appointments by customizing them to level up your beauty even
+                            We have a large variety of add-ons, you can make the most of your service appointments by customizing them to level up your beauty even
                              further. Lawwa.Asia add-ons are available to all customers for an even greater beauty experience.
                           </p>
                     </div>
@@ -152,96 +152,106 @@
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/henna.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Henna</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>
+                          Have your big day memorable with Lawwa Henna services that let you choose from various delicate designs of flower patterns. Cooling the nerve-endings of your body with Lawwa Henna now.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/manicure.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Manicure</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>
+                         Where nail meets art. You desire, we made it. We know you love us so why wait?
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/pedicure.jpg" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Pedicure</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>
+                         Shine from head to toe. Exfoliate your skin and remove any callouses on the bottom of your feet when you do Lawwa Pedicure.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/eye-perming.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Eye Perming</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Eyelash Perming</h5>
+                        <p>
+                         Give an attractive curl to your straight lashes and take it to a Luxurious Lengths. Say no more to lashes pressing against the backs of your glasses or spectacles.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/eye-treatment.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Eye Treatment</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Eye Care Treatment</h5>
+                        <p>
+                          Radiant, hydrated and glowing. That’s the results you’ll get after pamper your eyes with Lawwa Eye Care. Be the new flower of your version today.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/face-guasha.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Face Gua Sha</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>
+                         Lawwa Face Gua Sha relieve all the tensions in the muscles of your face and helps you boost blood circulation.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/lips-treatment.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Lips Treatment</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>
+                         Say goodbye to dry and chaped lips. Makes yourself alive every moment with moisture and healthier lips look. Elegance in every way with Lawwa Lips treatment
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/herbbath.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Herb Bath</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/reflexology.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Reflexology</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>
+                         Relax. Release. Rebalance. Love yourself as much as Lawwa loves you.
+                        </p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/tangas-basah.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">'Tangas Basah'</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
-                </div>
+                </div> -->
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/waxing.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Waxing</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>
+                         Remove dead skin cells now with Lawwa Waxing to reveal a softer underlying layer of your skin from any parts of the body.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Add-On/whitening-bodyscrub.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Whitening Body Scrub</h5>
-                        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p> -->
+                        <p>
+                         Smoothing and softening rough, dry skin of yours after a heavy workloads from your hectic everyday routine. Lawwa welcome the best in you.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -250,7 +260,7 @@
     <!-- Services Section End -->
 
     <!-- Services Option Section Begin -->
-    <section class="services-option">
+    <!-- <section class="services-option">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -296,22 +306,12 @@
                       </div>
                     </div>
                   </div>
-                    <!-- <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">03</div>
-                            <h5>Product</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div> -->
                 </div>
-
-
-
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Services Option Section End -->
+
 
         <!-- Portfolio Hero Section Begin -->
         <!-- class="ad-banner set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" -->
