--- a/lawwa-web-revised/confinement.html
+++ b/lawwa-web-revised/confinement.html
@@ -150,8 +150,8 @@
                         <img src="img/lawwa-img/img-selection/Confinement/normal-confinement.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Normal Confinement</h5>
                         <p>
-                          
-                          </p>
+                         Recuperate from the experience of childbirth and gain back your health with our Lawwa Normal Pregnancy Confinement Care services. Taking time for a cosy massage that will help ease chest pain, breast pain and also shoulder pain.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
@@ -159,7 +159,7 @@
                         <img src="img/lawwa-img/img-selection/Confinement/caesar-confinement.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Caesar</h5>
                         <p>
-
+                         Let Lawwa serves a wonderful time for the mother and baby to bond after a long hiatus of critical time giving birth. Feels the postnatal massage and lawwa confinement services that will stable mind and relaxed the mother body.
                         </p>
                     </div>
                 </div>
@@ -168,7 +168,7 @@
                         <img src="img/lawwa-img/img-selection/Confinement/misscariage.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Miscarriage</h5>
                         <p>
-                          
+                         Gain back your health, helps relax the body muscles and increase the flow of blood to all the parts of the body in this healing process when you subscribe for Lawwa Miscarriage Confinement Care package. Lawwa. Asia, always Caring. Always Here.
                         </p>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                       <img src="img/lawwa-img/img-selection/Confinement/single-confinement care.JPG" alt="">
                       <h5 class="lawwa-blue-text" style="text-transform: none;">Single Confinement Care</h5>
                       <p>
-
+                       The essence of Lawwa postnatal massage and confinement care services is to ensure that the mother gains strength, has a stable mind and a relaxed body to take care of the new born and facilitate her recovery period.
                       </p>
                   </div>
               </div>
@@ -187,7 +187,7 @@
     <!-- Services Section End -->
 
     <!-- Services Option Section Begin -->
-    <section class="services-option">
+    <!-- <section class="services-option">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -233,21 +233,10 @@
                       </div>
                     </div>
                   </div>
-                    <!-- <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">03</div>
-                            <h5>Product</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div> -->
                 </div>
-
-
-
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Services Option Section End -->
 
         <!-- Portfolio Hero Section Begin -->
