--- a/lawwa-web-revised/contact.html
+++ b/lawwa-web-revised/contact.html
@@ -123,11 +123,10 @@
 
     <br>
 
-    <div class="service-hero-wrap2">
-      <div class="container">
-        <div class="row no-gutters align-items-center"  data-scrollax-parent="true">
-            <section>
+          <section>
+              <div class="service-hero-wrap2">
                 <div class="container">
+                  <div class="row no-gutters align-items-center"  data-scrollax-parent="true"></div>
                     <div class="row">
                         <div class="col-12 col-xl-4 col-lg-4 col-md-6 col-sm-6">
                             <div class="contact-text2">
@@ -138,18 +137,8 @@
                                     <div class="ct-icon">
                                       <i class="fa fa-map-marker"></i>
                                     </div>
-                                    <div class="ct-text"> 
+                                      <div class="ct-text"> 
                                         <h5>Visit Our Office:</h5>
-                                        <!-- <a href="https://www.google.com.my/maps/place/LAWWA.ASIA/@2.7179612,101.9230929,17z/data=!3m1!4b1!4m5!3m4!1s0x31cde7207e78f4b3:0xae4f6ff8fa1d6555!8m2!3d2.7179612!4d101.9252816" target="_blank">
-                                          <div class="" style="max-width: 40px; max-height: 40px;">
-                                            <img src="img/lawwa-img/map-icon.jpg" />
-                                          </div>
-                                        </a>
-                                        <a  target="_blank" href="https://www.waze.com/live-map/directions/malaysia/negeri-sembilan/seremban/lawwa.asia?utm_source=waze_website&utm_campaign=waze_website&utm_medium=website_menu&to=place.ChIJs_R4fiDnzTERVWUd-vhvT64">
-                                          <div class="" style="max-width: 40px; max-height: 40px;">
-                                            <img src="img/lawwa-img/waze-icon.jpg" />
-                                          </div>
-                                        </a>  -->
                                         <a href="https://www.google.com.my/maps/place/LAWWA.ASIA/@2.7179612,101.9230929,17z/data=!3m1!4b1!4m5!3m4!1s0x31cde7207e78f4b3:0xae4f6ff8fa1d6555!8m2!3d2.7179612!4d101.9252816" target="_blank">
                                           <p>
                                           Lawwa.Asia Oasis Southern Region
@@ -232,11 +221,9 @@
                     </div>
                     </div> -->
                 </div>
-            </section>
-        </div>
-      </div>
-    </div>
-    
+              </div>
+            </div>
+          </section>
 
  <!-- Footer Section Begin -->
  <footer class="footer-section">
