--- a/lawwa-web-revised/massage.html
+++ b/lawwa-web-revised/massage.html
@@ -179,7 +179,7 @@
     <!-- Services Section End -->
 
     <!-- Services Option Section Begin -->
-    <section class="services-option">
+    <!-- <section class="services-option">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -225,21 +225,10 @@
                       </div>
                     </div>
                   </div>
-                    <!-- <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">03</div>
-                            <h5>Product</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div> -->
                 </div>
-
-
-
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Services Option Section End -->
 
         <!-- Portfolio Hero Section Begin -->
