--- a/lawwa-web-revised/facial.html
+++ b/lawwa-web-revised/facial.html
@@ -153,63 +153,63 @@
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Facial/deepcleansing.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Deep Cleansing Facial</h5>
-                        <!-- <p>
-                          Adding care to your normal, dry & dehydrated skins that instantly moisturize skin to get the calming and soothing effect! 
-                        </p> -->
+                        <p>
+                         Adding care to your normal, dry & dehydrated skins that instantly moisturize skin to get the calming and soothing effect ! 
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Facial/hydratingfacial.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Hydrating Facial</h5>
-                        <!-- <p>
-                          Rejuvenate your skin and feel the change of moisturizing & firming treatment for a brighter & radiant complexion.
-                        </p> -->
+                        <p>
+                         Rejuvenate your skin and feel the change of moisturizing & firming treatment for a brighter & radiant complexion.
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Facial/detoxifyingfacial.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Natural Detoxifying Facial</h5>
-                        <!-- <p>
-                          Let your oily and congested skins look better by remove skin impurities to improve skin clarity & prevent acne breakout. 
-                        </p> -->
+                        <p>
+                         Let your oily and congested skins look better by remove skin impurities to improve skin clarity & prevent acne breakout. 
+                        </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                       <img src="img/lawwa-img/img-selection/Facial/signatureacne.JPG" alt="">
                       <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Signature Acne Clearing Treatment</h5>
-                      <!-- <p>
-                        Goodbye to acne & pimple problems! This treatment will stimulate cell renewal, promote healing and lighten scars & marks.
-                      </p><br> -->
+                      <p>
+                       Goodbye to acne & pimple problems! This treatment will stimulate cell renewal, promote healing and lighten scars & marks.
+                      </p>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/img-selection/Facial/signaturepigmentation.JPG" alt="">
                     <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Signature Pigmentation Treatment</h5>
-                    <!-- <p>
-                      Restore your skin natural glow & give instant brightening result after treatment that give smooth, supple and younger looking for pigmentation, rough skin and dull complexion problems. 
-                    </p> -->
+                    <p>
+                     Restore your skin natural glow & give instant brightening result after treatment that give smooth, supple and younger looking for pigmentation, rough skin and dull complexion problems. 
+                    </p>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/img-selection/Facial/intensiveanti-wrinkle.JPG" alt="">
                     <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Intensive Anti-wrinkle Skin Therapy</h5>
-                    <!-- <p>
-                      Times never come again, restore your skin natural glow and instant radiant result to improve wrinkle and sagging skins.
-                    </p><br> -->
+                    <p>
+                     Times never come again, restore your skin natural glow and instant radiant result to improve wrinkle and sagging skins.
+                    </p>
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="services-item">
                     <img src="img/lawwa-img/img-selection/Facial/intensivephoton.JPG" alt="">
                     <h5 class="lawwa-blue-text" style="text-transform: none;">Lawwa Intensive Photon Technology Skin Therapy</h5>
-                    <!-- <p>
-                      Delete old style in your beauty therapy with our intensive Photon Technology service to have immediate brighter complexion and increase blood flow & collagen for dull and mature skin. 
-                    </p> -->
+                    <p>
+                     Delete old style in your beauty therapy with our intensive Photon Technology service to have immediate brighter complexion and increase blood flow & collagen for dull and mature skin. 
+                    </p>
                   </div>
                 </div>
               </div>
@@ -218,7 +218,7 @@
     <!-- Services Section End -->
 
     <!-- Services Option Section Begin -->
-    <section class="services-option">
+    <!-- <section class="services-option">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -264,21 +264,10 @@
                       </div>
                     </div>
                   </div>
-                    <!-- <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">03</div>
-                            <h5>Product</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div> -->
                 </div>
-
-
-
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Services Option Section End -->
 
         <!-- Portfolio Hero Section Begin -->
