--- a/lawwa-web-revised/treatment.html
+++ b/lawwa-web-revised/treatment.html
@@ -140,7 +140,9 @@
                   <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
                     <h3>Treatment Services</h3>
                         <!-- <p>Lorem .</p> -->
-                          <p>Massage meant to refreshes your body, sooth your aching muscle, and calm your mind. Find 1 that  suit your mood now !</p>
+                          <p>
+                            Treatment Massage for maintaining your body !
+                          </p>
                     </div>
                 </div>
             </div>
@@ -148,9 +150,9 @@
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="services-item">
                         <img src="img/lawwa-img/img-selection/Treatment/tummypoint.JPG" alt="">
-                        <h5 class="lawwa-blue-text" style="text-transform: none;">Belly Point Treatment</h5>
+                        <h5 class="lawwa-blue-text" style="text-transform: none;">Tummy Massage</h5>
                         <p>
-
+                         Get an instant flat belly by getting our special belly massage that surely will detox & make you impress with your new belly circumference.
                         </p>
                     </div>
                 </div>
@@ -159,7 +161,7 @@
                         <img src="img/lawwa-img/img-selection/Treatment/bust-enhancement.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Bust Enhancement Treatment</h5>
                         <p>
-
+                         Boost your confidence with firmer and ideal breast shape!
                         </p>
                     </div>
                 </div>
@@ -168,7 +170,7 @@
                         <img src="img/lawwa-img/img-selection/Treatment/hip-uplifting.JPG" alt="">
                         <h5 class="lawwa-blue-text" style="text-transform: none;">Hip Uplifting Treatment</h5>
                         <p>
-                          
+                         Comfort is the first step in relaxation, this treatment will help you relieves back pain & improve your hip appearance.
                         </p>
                     </div>
                 </div>
@@ -178,7 +180,7 @@
     <!-- Services Section End -->
 
     <!-- Services Option Section Begin -->
-    <section class="services-option">
+    <!-- <section class="services-option">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -224,21 +226,10 @@
                       </div>
                     </div>
                   </div>
-                    <!-- <div class="so-item">
-                        <div class="so-title">
-                            <div class="so-number">03</div>
-                            <h5>Product</h5>
-                        </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
-                    </div> -->
                 </div>
-
-
-
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Services Option Section End -->
 
         <!-- Portfolio Hero Section Begin -->
